# seize

./: CLAUDE.md  Cargo.toml  PROJECT_ORGANIZATION_REPORT.md  README.md  USE_THIS_TEMPLATE.md
.claude/: YOUR_DOMAIN_LOGIC.md  settings.local.json
.claude/agents/: seize-agent.md  systems-engineer.md
.claude/commands/: seize-build.md  seize-doc.md
.claude/hooks/: readme.md
.codex/agents/: readme.md
.codex/commands/: readme.md
.codex/hooks/: readme.md
.codex/skills/: readme.md
crates/seize-cli/: Cargo.toml
crates/seize-cli/src/: main.rs  requirements_handler.rs
crates/seize-core/: Cargo.toml
crates/seize-core/src/: agent.rs  command.rs  intent.rs  lib.rs  requirements.rs  transformation.rs  world.rs
docs/: DEPLOYMENT_GUIDE.md  QUICKSTART.md  README.md  YOUR_DESIGN.md  arxiv_submission_strategy.md  paper_law_of_flickering_scenery.md
docs/claude_code_plugin/hooks/: 00_AUTO_LAUNCH_SPECIFICATION.md  05_VIRAL_STRATEGY.md  06_INTEGRATION_GUIDE.md  README.md
docs/guides/: controlling-detail-levels.md
docs/reports/: UI_UX_REVIEW_REPORT.md
examples/: README.md
examples/ecommerce-auth/: README.md
examples/ecommerce-auth/requirements/: requirements_v1.md
examples/ecommerce-auth/stakeholders/: product_owner_interview.md  security_team_interview.md  user_feedback.md
web/: DESIGN_CONCEPT.md  DESIGN_SIMPLE.md  HUMAN_CENTERED_DESIGN.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  index.css
web/src/components/: AgentStatePanel.tsx  ApprovalDialog.tsx  ChatInterface.tsx  CommentBubbles.tsx  DecisionLedger.tsx  DemoControls.tsx  EditableKnowledgeGraph.tsx  GraphView.tsx  KnowledgeGraphView.tsx  (+2 more)
(+13 files in other folders)
