[workspace]
resolver = "2"
members = [
    "crates/seize-core",
    "crates/seize-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Seize Project Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/seize"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
